--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
                    <li>gemini</li>
                    <li>deepseek</li>
              </ul>
-     <img src="https://media3.giphy.com/media/26BGGxgsEh42ABHFe/giphy.gif?cid=ecf05e47fewnmm2h6vijgpd1768vz8zxo441mpec89684gtw&rid=giphy.gif&ct=g" alt="Image1">
+     <img src="https://media3.giphy.com/media/26BGGxgsEh42ABHFe/giphy.gif?cid=ecf05e47fewnmm2h6vijgpd1768vz8zxo441mpec89684gtw&rid=giphy.gif&ct=g" alt="Image1"><iframe src="https://www.meteoblue.com/tr/hava/haritas%C4%B1/widget/sidney_avustralya_2147714?windAnimation=1&gust=1&satellite=1&cloudsAndPrecipitation=1&temperature=1&sunshine=1&extremeForecastIndex=1&geoloc=fixed&tempunit=C&windunit=km%252Fh&lengthunit=metric&zoom=5&autowidth=auto&user_key=ab197c8659f07743&embed_key=03f26b72359079c9&sig=46cf991d085f609bb2c24cd3927c2ef5b9a8b8c673afdc3e6343d4770739920e" frameborder="0" scrolling="NO" allowtransparency="true" sandbox="allow-same-origin allow-scripts allow-popups allow-popups-to-escape-sandbox" style="width: 100%;height: 700px;border: 0;overflow: hidden;"></iframe><div><!-- DO NOT REMOVE THIS LINK --><a href="https://www.meteoblue.com/tr/hava/hafta/index" target="_blank" rel="noopener">meteoblue</a></div>
 </body>
 </html>
-
-
-
